2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Fully initialize delta objects.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): If there is no "commitid"
	field, explicitly clear ‘d->commitid’.
	Reported by Paul Eggert.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Fully initialize notyet objects.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): If there are no more revision
	numbers to parse, explicitly clear ‘ny->next’.
	Reported by Paul Eggert.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Delete unused macro.

	* b-grok.c (NEWPAIR): Delete macro.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Save notyet objects in caller space.

	Memory incoherence introduced 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): Don't save notyet objects in
	‘g->tranquil’; instead, save in caller specified space.
	Reported by Paul Eggert.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid identifier ‘SHARED’ (Solaris 8 header conflict).

	* b-divvy.c: Do s/SHARED/PLEXUS/g; do s/shared/plexus/g.
	* b-divvy.h: Likewise.
	* b-feph.c: Likewise.
	* b-isr.c: Likewise.
	* ci.c: Likewise.
	* co.c: Likewise.
	* merger.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcsutil.c: Likewise.
	* rlog.c: Likewise.
	Reported by Paul Eggert.

2010-10-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Let the configure script instantiate rcsfreeze.

	* Makefile.am (EXTRA_DIST): Remove rcsfreeze.sh.
	(rcsfreeze): Delete target.
	* rcsfreeze.sh: Add '@' around ‘PACKAGE_VERSION’.

2010-09-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct symdef’ array as "three manifestations" ‘merge’ arg.

	* b-merger.h: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-merger.h.
	* merger.c: #include "b-merger.h".
	(merge): Don't take LABEL and ARGV; instead, take