@@ -17,6 +17,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+check_PROGRAMS = xorlf
+
 check_SCRIPTS = test-prep
 
 # This is for the benefit of "make installcheck".
