@@ -1,0 +1,33 @@
+/* xorlf.c --- XOR stdin with LF (aka '\n', 012, 0xA) to stdout
+
+   Copyright (C) 2010 Thien-Thi Nguyen
+
+   This file is part of GNU RCS.
+
+   GNU RCS is free software: you can redistribute it and/or modify it
+   under the terms of the GNU General Public License as published by
+   the Free Software Foundation, either version 3 of the License, or
+   (at your option) any later version.
+
+   GNU RCS is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty
+   of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+   See the GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+#include <stdio.h>
+
+int
+main (void)
+{
+  int c;
+
+  while (EOF != (c = getchar ()))
+    putchar (c ^ 012);
+  return 0;
+}
+
+/* xorlf.c ends here */
