@@ -1,3 +1,11 @@
+2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Use Automake for building xorlf.
+
+	* Makefile.am (check_PROGRAMS): New var.
+	* t999.test (xorlf): New var; use it for xorlf invocation.
+	* xorlf.c: New file.
+
 2010-10-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[v] Use Automake for test preparation.
